# tic-tac-toe

./: CLAUDE.md  LICENSE  README.md  test_tic_tac_toe.py  tic_tac_toe.py
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-auditor.md  staff-reviewer.md  test-runner.md
.devcontainer/: README.md  devcontainer.json
.github/: CI_SETUP.md
.github/workflows/: cpp-build-test.yml  test.yml
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md
cpp/application/: CMakeLists.txt
cpp/application/include/application/: AgentPlayer.hpp  ContinuationResult.hpp  GameFinishedListener.hpp  GameStartListener.hpp  Player.hpp  Quit.hpp  Scoreboard.hpp  Session.h  Session.hpp  SessionGenerator.hpp  TicTacToeApp.hpp
cpp/application/mocks/: MockGameFinishedListener.hpp  MockGameStartListener.hpp  MockPlayer.hpp  MockSessionGenerator.hpp
cpp/application/src/: AgentPlayer.cpp  Scoreboard.cpp  Session.cpp  TicTacToeApp.cpp
cpp/application/tests/: AgentPlayerTest.cpp  ScoreboardTest.cpp  SessionTest.cpp  TicTacToeAppTest.cpp
cpp/application/tests/mocks/: MockPlayer.hpp  MockSessionGenerator.hpp
cpp/core/: CMakeLists.txt
cpp/core/include/core/: Agent.hpp  Board.hpp  GameLogic.hpp  GameState.hpp  GameStatus.hpp  Marker.hpp  Position.hpp
cpp/core/include/core/agents/: MinmaxAgent.hpp  RandomAgent.hpp
cpp/core/mocks/: MockAgent.hpp
cpp/core/src/: Board.cpp  GameLogic.cpp  GameState.cpp  GameStatus.cpp  Marker.cpp  Position.cpp
cpp/core/src/agents/: MinmaxAgent.cpp  RandomAgent.cpp
cpp/core/tests/: BoardTest.cpp  GameLogicTest.cpp  GameStateTest.cpp  GameStatusTest.cpp  MarkerTest.cpp  PositionTest.cpp
cpp/core/tests/agents/: MinmaxAgentTest.cpp  RandomAgentTest.cpp
cpp/domain/: CMakeLists.txt
cpp/domain/include/domain/: Board.h  Board.hpp  GameState.hpp  GameStatus.hpp  Marker.hpp  Position.hpp
cpp/domain/src/: Board.cpp  GameState.cpp  GameStatus.cpp  Marker.cpp  Position.cpp
cpp/domain/tests/: BoardTest.cpp  GameStateTest.cpp  GameStatusTest.cpp  MarkerTest.cpp  PositionTest.cpp
cpp/include/: Board.h  Player.h  TicTacToe.h
cpp/presentation/: CMakeLists.txt
cpp/presentation/console/: CMakeLists.txt
cpp/presentation/console/include/presentation/: Console.hpp
cpp/presentation/console/src/: Console.cpp
cpp/presentation/include/presentation/: ConsoleView.h  ConsoleView.hpp
cpp/presentation/ncurses/: CMakeLists.txt
cpp/presentation/ncurses/include/presentation/: Ncurses.hpp
cpp/presentation/ncurses/include/presentation/ncurses/: BoardRenderer.hpp  Colors.hpp  IScreen.hpp
cpp/presentation/ncurses/include/presentation/ncurses/screens/: GameBoardScreen.hpp  GameResultScreen.hpp  GameStartScreen.hpp  PlayerSelectionScreen.hpp
cpp/presentation/ncurses/src/: BoardRenderer.cpp  Ncurses.cpp
cpp/presentation/ncurses/src/screens/: GameBoardScreen.cpp  GameResultScreen.cpp  GameStartScreen.cpp  PlayerSelectionScreen.cpp
cpp/presentation/src/: ConsoleView.cpp
cpp/presentation/tests/: ConsoleViewTest.cpp
cpp/src/: Board.cpp  TicTacToe.cpp  main.cpp
cpp/tests/: BoardTest.cpp
docs/: ARCHITECTURAL_ALTERNATIVES.md  DESIGN_REVIEW.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPROVED_ARCHITECTURE.md  REFERENCE_ARCHITECTURE.md
